Fix layout issues

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -8,7 +8,7 @@
 }
 
 html {
-  @apply bg-gray-950 text-gray-200 antialiased;
+  @apply bg-black text-gray-200 antialiased;
 }
 
 @layer base {
@@ -17,4 +17,9 @@ html {
     -webkit-appearance: none;
     margin: 0;
   }
+}
+
+.slider {
+    background: repeating-linear-gradient(90deg, #0f172a, #0f172a 3px, #94a3b8 3px, #94a3b8 4px);
+
 }
